--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
-
+        <script type="text/javascript" src="app.js"></script>
     </head>
     <body>
         <h1>Fixing git mistakes</h1>
+        <p>Here's how to fix some issues</p>
     </body>
 </html>
